# daige-agent

./: .gitignore  README.md  agent.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  search.json  search2.json  search3.json  search4.json  template.env  toolbox.sh
agent_configurator/: daige.json
agents/: agent.json  daige.json
daige/: main.py  pyproject.toml
daige/agent/: daige.py
daige/agent_configurator/: daige.json
data/: memories.json
galadriel_agent/: agent.py  models.py  utils.py
galadriel_agent/clients/: database.py  galadriel.py  perplexity.py  twitter.py
galadriel_agent/prompts/: get_search_query.py
galadriel_agent/sdk/: agent.py  logging_utils.py
src/: twitter_client.py
tests/unit/prompts/: test_get_search_query.py
