[tool.poetry]
name = "galadriel-agent"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.9.4"
openai = "^1.55.3"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.5"
requests-oauthlib = "^2.0.0"
black = {version = "^24.8.0", optional = true}
mypy = {version = "^1.11.2", optional = true}
pylint = {version = "^3.2.7", optional = true}
pytest = {version = "^8.3.2", optional = true}
pytest-asyncio = {version = "0.24.0", optional = true}
pytest-mock = {version = "^3.14.0", optional = true}


[tool.poetry.extras]
dev = ["black", "mypy", "pylint", "pytest", "pytest-asyncio", "pytest-mock"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"