[tool.poetry]
name = "daige"
version = "0.0.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
#galadriel-agent = { git = "https://github.com/galadriel-ai/galadriel-agent.git", branch = "main" }
galadriel-agent = { path = "../galadriel-agent" }


[tool.poetry.extras]
dev = ["black", "mypy", "pylint", "pytest", "pytest-asyncio", "pytest-mock"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"